# S5BinkHook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  S5BinkHook.sln  conanfile.txt
CppLogicBBA/Script/InterfaceTools/: AutoScroll.lua
CppLogicBBA/Script/ModLoader/: ModLoader.lua
CppLogicBBA/Script/mainmenu/: z_ModLoader.lua
CppLogicBBA/maps/default/: ModLoader.lua
Data/: DiplomacyWindowPlayers.xml  OptionsMenu.xml  s5_luafuncs.java  test_scroll.xml
ExtraPlayers/modpack/ExtraPlayers/: ScriptLoader.lua  modpack.xml  modpackloader.lua
S5BinkHook/: S5BinkHook.vcxproj  S5BinkHook.vcxproj.filters  binkw32.def  binkw_orig.h  dllmain.cpp
S5BinkHook/orig/: binkw32_orig.lib
S5CppLogic/: ConstexprString.h  CppLogic.lua  EntityAddonData.cpp  EntityAddonData.h  EnumIdManagerMagic.h  LuaEventInterface.h  ModBehavior.cpp  ModBehavior.h  ModConfig.cpp  ModConfig.h  ModEffect.cpp  ModEffect.h  ModFilesystem.h  ModUI.cpp  ModUI.h  Resource.rc  S5CppLogic.vcxproj  S5CppLogic.vcxproj.filters  SchemaGenerator.cpp  SchemaGenerator.h  Source.def  StringUtility.h  Win.h  WinAPIUtil.cpp  WinAPIUtil.h  cpp.hint  directx.h  dllmain.cpp  dump_guitextures.h  entityiterator.cpp  entityiterator.h  enumflags.h  hooks.cpp  hooks.h  l_api.cpp  l_api.h  l_combat.cpp  l_combat.h  l_effect.cpp  l_effect.h  (+153 more)
S5CppLogic/doc/: CppLogic.lua  ModLoader.lua  ModPack.xml  ModPackLoader.lua  customwidgets.txt  data_notes.txt  gamemechanics_documentation.txt  mapscript_notes.txt  mod_anatomy.txt  random_notes.txt
S5CppLogic/lua50/: S5Lua5.lib
S5CppLogic/luafuncs/: l_api.cpp  l_api.h  l_combat.cpp  l_combat.h  l_effect.cpp  l_effect.h  l_entity.cpp  l_entity.h  l_entitytype.cpp  l_entitytype.h  l_logic.cpp  l_logic.h  l_mem.cpp  l_mem.h  l_tech.cpp  l_tech.h  l_ua.cpp  l_ua.h  l_ui.cpp  l_ui.h
S5CppLogic/mod/: ModBehavior.cpp  ModBehavior.h  ModConfig.cpp  ModConfig.h  ModEffect.h  ModFilesystem.cpp  ModFilesystem.h  ModPlayers.cpp  ModUI.cpp  ModUI.h
S5CppLogic/shok/: s5_baseDefs.cpp  s5_baseDefs.h  s5_datastructures.cpp  s5_datastructures.h  s5_defines.h  s5_enumdump.h  s5_exception.h  s5_forwardDecls.h  s5_mem.h  s5_scriptsystem.cpp  s5_scriptsystem.h
S5CppLogic/shok/effect/: s5_effects.cpp  s5_effects.h  s5_effects_manual.asm  s5_effecttype.cpp  s5_effecttype.h
S5CppLogic/shok/engine/: directx.h  s5_BBRw.cpp  s5_BBRw.h  s5_RWE_2d.cpp  s5_RWE_2d.h  s5_RWE_3d.h  s5_RWE_anim.cpp  s5_RWE_anim.h  s5_RWE_enums.h  s5_RWE_io.h  s5_RWE_particles.cpp  s5_RWE_particles.h  s5_RWE_plugin.h  s5_RWEngine.cpp  s5_RWEngine.h
S5CppLogic/shok/entity/: s5_animset.cpp  s5_animset.h  s5_baseprops.cpp  s5_baseprops.h  s5_behaviors.cpp  s5_behaviors.h  s5_entity.cpp  s5_entity.h  s5_entity_manual.asm  s5_entitydisplay.cpp  s5_entitydisplay.h  s5_tasklist.cpp  s5_tasklist.h
S5CppLogic/shok/entitytype/: s5_behaviorProps.cpp  s5_behaviorProps.h  s5_behaviorProps_manual.asm  s5_entitytype.cpp  s5_entitytype.h
S5CppLogic/shok/events/: s5_events.cpp  s5_events.h  s5_netevents.cpp  s5_netevents.h
S5CppLogic/shok/globals/: s5_classfactory.cpp  s5_classfactory.h  s5_config.cpp  s5_config.h  s5_cutscene.h  (+17 more)
S5CppLogic/utility/: ConstexprString.h  EntityAddonData.cpp  EntityAddonData.h  EnumIdManagerMagic.h  LuaEventInterface.h  ModBehavior.cpp  ModBehavior.h  ModConfig.cpp  ModConfig.h  ModEffect.cpp  ModEffect.h  ModFilesystem.cpp  ModFilesystem.h  ModPlayers.cpp  ModPlayers.h  ModUI.cpp  ModUI.h  OnScopeExit.h  SchemaGenerator.cpp  SchemaGenerator.h  StringUtil.cpp  TextRenderer.h  WinAPIUtil.cpp  WinAPIUtil.h  entityiterator.cpp  entityiterator.h  enumflags.h  hooks.cpp  hooks.h  luaserializer.cpp  luaserializer.h  mod.h  modloader.cpp  modloader.h  savegame_extra.cpp  savegame_extra.h
(+19 files in other folders)
